source/fitsio.d


float ffvers (float* version_);
void ffupch (char* string);
void ffgerr (int status, char* errtext);
void ffpmsg (const(char)* err_message);
void ffpmrk ();
int ffgmsg (char* err_message);
void ffcmsg ();
void ffcmrk ();
void ffrprt (FILE* stream, int status);
void ffcmps (char* templt, char* colname, int casesen, int* match, int* exact);
int fftkey (const(char)* keyword, int* status);
int fftrec (char* card, int* status);
int ffnchk (fitsfile* fptr, int* status);
int ffkeyn (const(char)* keyroot, int value, char* keyname, int* status);
int ffnkey (int value, const(char)* keyroot, char* keyname, int* status);
int ffgkcl (char* card);
int ffdtyp (const(char)* cval, char* dtype, int* status);
int ffinttyp (char* cval, int* datatype, int* negative, int* status);
int ffpsvc (char* card, char* value, char* comm, int* status);
int ffgknm (char* card, char* name, int* length, int* status);
int ffgthd (char* tmplt, char* card, int* hdtype, int* status);
int ffmkky (const(char)* keyname, char* keyval, const(char)* comm, char* card, int* status);
int fits_translate_keyword (
    char* inrec,
    char* outrec,
    ref char*[2]* patterns,
    int npat,
    int n_value,
    int n_offset,
    int n_range,
    int* pat_num,
    int* i,
    int* j,
    int* m,
    int* n,
    int* status);
int fits_translate_keywords (
    fitsfile* infptr,
    fitsfile* outfptr,
    int firstkey,
    ref char*[2]* patterns,
    int npat,
    int n_value,
    int n_offset,
    int n_range,
    int* status);
int ffasfm (char* tform, int* datacode, c_long* width, int* decim, int* status);
int ffbnfm (char* tform, int* datacode, c_long* repeat, c_long* width, int* status);
int ffbnfmll (char* tform, int* datacode, LONGLONG* repeat, c_long* width, int* status);
int ffgabc (
    int tfields,
    char** tform,
    int space,
    c_long* rowlen,
    c_long* tbcol,
    int* status);
int fits_get_section_range (
    char** ptr,
    c_long* secmin,
    c_long* secmax,
    c_long* incre,
    int* status);
/* ffmbyt should not normally be used in application programs, but it is
   defined here as a publicly available routine because there are a few
   rare cases where it is needed
*/
int ffmbyt (fitsfile* fptr, LONGLONG bytpos, int ignore_err, int* status);
/*----------------- write single keywords --------------*/
int ffpky (
    fitsfile* fptr,
    int datatype,
    const(char)* keyname,
    void* value,
    const(char)* comm,
    int* status);
int ffprec (fitsfile* fptr, const(char)* card, int* status);
int ffpcom (fitsfile* fptr, const(char)* comm, int* status);
int ffpunt (fitsfile* fptr, const(char)* keyname, const(char)* unit, int* status);
int ffphis (fitsfile* fptr, const(char)* history, int* status);
int ffpdat (fitsfile* fptr, int* status);
int ffverifydate (int year, int month, int day, int* status);
int ffgstm (char* timestr, int* timeref, int* status);
int ffgsdt (int* day, int* month, int* year, int* status);
int ffdt2s (int year, int month, int day, char* datestr, int* status);
int fftm2s (
    int year,
    int month,
    int day,
    int hour,
    int minute,
    double second,
    int decimals,
    char* datestr,
    int* status);
int ffs2dt (char* datestr, int* year, int* month, int* day, int* status);
int ffs2tm (
    char* datestr,
    int* year,
    int* month,
    int* day,
    int* hour,
    int* minute,
    double* second,
    int* status);
int ffpkyu (fitsfile* fptr, const(char)* keyname, const(char)* comm, int* status);
int ffpkys (fitsfile* fptr, const(char)* keyname, const(char)* value, const(char)* comm, int* status);
int ffpkls (fitsfile* fptr, const(char)* keyname, const(char)* value, const(char)* comm, int* status);
int ffplsw (fitsfile* fptr, int* status);
int ffpkyl (fitsfile* fptr, const(char)* keyname, int value, const(char)* comm, int* status);
int ffpkyj (fitsfile* fptr, const(char)* keyname, LONGLONG value, const(char)* comm, int* status);
int ffpkyuj (fitsfile* fptr, const(char)* keyname, ULONGLONG value, const(char)* comm, int* status);
int ffpkyf (
    fitsfile* fptr,
    const(char)* keyname,
    float value,
    int decim,
    const(char)* comm,
    int* status);
int ffpkye (
    fitsfile* fptr,
    const(char)* keyname,
    float value,
    int decim,
    const(char)* comm,
    int* status);
int ffpkyg (
    fitsfile* fptr,
    const(char)* keyname,
    double value,
    int decim,
    const(char)* comm,
    int* status);
int ffpkyd (
    fitsfile* fptr,
    const(char)* keyname,
    double value,
    int decim,
    const(char)* comm,
    int* status);
int ffpkyc (
    fitsfile* fptr,
    const(char)* keyname,
    float* value,
    int decim,
    const(char)* comm,
    int* status);
int ffpkym (
    fitsfile* fptr,
    const(char)* keyname,
    double* value,
    int decim,
    const(char)* comm,
    int* status);
int ffpkfc (
    fitsfile* fptr,
    const(char)* keyname,
    float* value,
    int decim,
    const(char)* comm,
    int* status);
int ffpkfm (
    fitsfile* fptr,
    const(char)* keyname,
    double* value,
    int decim,
    const(char)* comm,
    int* status);
int ffpkyt (
    fitsfile* fptr,
    const(char)* keyname,
    c_long intval,
    double frac,
    const(char)* comm,
    int* status);
int ffptdm (fitsfile* fptr, int colnum, int naxis, c_long* naxes, int* status);
int ffptdmll (fitsfile* fptr, int colnum, int naxis, LONGLONG* naxes, int* status);

/*----------------- write array of keywords --------------*/
int ffpkns (
    fitsfile* fptr,
    const(char)* keyroot,
    int nstart,
    int nkey,
    char** value,
    char** comm,
    int* status);
int ffpknl (
    fitsfile* fptr,
    const(char)* keyroot,
    int nstart,
    int nkey,
    int* value,
    char** comm,
    int* status);
int ffpknj (
    fitsfile* fptr,
    const(char)* keyroot,
    int nstart,
    int nkey,
    c_long* value,
    char** comm,
    int* status);
int ffpknjj (
    fitsfile* fptr,
    const(char)* keyroot,
    int nstart,
    int nkey,
    LONGLONG* value,
    char** comm,
    int* status);
int ffpknf (
    fitsfile* fptr,
    const(char)* keyroot,
    int nstart,
    int nkey,
    float* value,
    int decim,
    char** comm,
    int* status);
int ffpkne (
    fitsfile* fptr,
    const(char)* keyroot,
    int nstart,
    int nkey,
    float* value,
    int decim,
    char** comm,
    int* status);
int ffpkng (
    fitsfile* fptr,
    const(char)* keyroot,
    int nstart,
    int nkey,
    double* value,
    int decim,
    char** comm,
    int* status);
int ffpknd (
    fitsfile* fptr,
    const(char)* keyroot,
    int nstart,
    int nkey,
    double* value,
    int decim,
    char** comm,
    int* status);
int ffcpky (
    fitsfile* infptr,
    fitsfile* outfptr,
    int incol,
    int outcol,
    char* rootname,
    int* status);

/*----------------- write required header keywords --------------*/
int ffphps (fitsfile* fptr, int bitpix, int naxis, c_long* naxes, int* status);
int ffphpsll (fitsfile* fptr, int bitpix, int naxis, LONGLONG* naxes, int* status);
int ffphpr (
    fitsfile* fptr,
    int simple,
    int bitpix,
    int naxis,
    c_long* naxes,
    LONGLONG pcount,
    LONGLONG gcount,
    int extend,
    int* status);
int ffphprll (
    fitsfile* fptr,
    int simple,
    int bitpix,
    int naxis,
    LONGLONG* naxes,
    LONGLONG pcount,
    LONGLONG gcount,
    int extend,
    int* status);
int ffphtb (
    fitsfile* fptr,
    LONGLONG naxis1,
    LONGLONG naxis2,
    int tfields,
    char** ttype,
    c_long* tbcol,
    char** tform,
    char** tunit,
    const(char)* extname,
    int* status);
int ffphbn (
    fitsfile* fptr,
    LONGLONG naxis2,
    int tfields,
    char** ttype,
    char** tform,
    char** tunit,
    const(char)* extname,
    LONGLONG pcount,
    int* status);
int ffphext (
    fitsfile* fptr,
    const(char)* xtension,
    int bitpix,
    int naxis,
    c_long* naxes,
    LONGLONG pcount,
    LONGLONG gcount,
    int* status);
/*----------------- write template keywords --------------*/
int ffpktp (fitsfile* fptr, const(char)* filename, int* status);

/*------------------ get header information --------------*/
int ffghsp (fitsfile* fptr, int* nexist, int* nmore, int* status);
int ffghps (fitsfile* fptr, int* nexist, int* position, int* status);

/*------------------ move position in header -------------*/
int ffmaky (fitsfile* fptr, int nrec, int* status);
int ffmrky (fitsfile* fptr, int nrec, int* status);

/*------------------ read single keywords -----------------*/
int ffgnxk (
    fitsfile* fptr,
    char** inclist,
    int ninc,
    char** exclist,
    int nexc,
    char* card,
    int* status);
int ffgrec (fitsfile* fptr, int nrec, char* card, int* status);
int ffgcrd (fitsfile* fptr, const(char)* keyname, char* card, int* status);
int ffgstr (fitsfile* fptr, const(char)* string, char* card, int* status);
int ffgunt (fitsfile* fptr, const(char)* keyname, char* unit, int* status);
int ffgkyn (
    fitsfile* fptr,
    int nkey,
    char* keyname,
    char* keyval,
    char* comm,
    int* status);
int ffgkey (
    fitsfile* fptr,
    const(char)* keyname,
    char* keyval,
    char* comm,
    int* status);

int ffgky (
    fitsfile* fptr,
    int datatype,
    const(char)* keyname,
    void* value,
    char* comm,
    int* status);
int ffgkys (fitsfile* fptr, const(char)* keyname, char* value, char* comm, int* status);
int ffgksl (fitsfile* fptr, const(char)* keyname, int* length, int* status);
int ffgkcsl (fitsfile* fptr, const(char)* keyname, int* length, int* comlength, int* status);
int ffgkls (fitsfile* fptr, const(char)* keyname, char** value, char* comm, int* status);
int ffgsky (
    fitsfile* fptr,
    const(char)* keyname,
    int firstchar,
    int maxchar,
    char* value,
    int* valuelen,
    char* comm,
    int* status);
int ffgskyc (
    fitsfile* fptr,
    const(char)* keyname,
    int firstchar,
    int maxchar,
    int maxcomchar,
    char* value,
    int* valuelen,
    char* comm,
    int* comlen,
    int* status);
int fffree (void* value, int* status);
int fffkls (char* value, int* status);
int ffgkyl (fitsfile* fptr, const(char)* keyname, int* value, char* comm, int* status);
int ffgkyj (fitsfile* fptr, const(char)* keyname, c_long* value, char* comm, int* status);
int ffgkyjj (fitsfile* fptr, const(char)* keyname, LONGLONG* value, char* comm, int* status);
int ffgkyujj (fitsfile* fptr, const(char)* keyname, ULONGLONG* value, char* comm, int* status);
int ffgkye (fitsfile* fptr, const(char)* keyname, float* value, char* comm, int* status);
int ffgkyd (fitsfile* fptr, const(char)* keyname, double* value, char* comm, int* status);
int ffgkyc (fitsfile* fptr, const(char)* keyname, float* value, char* comm, int* status);
int ffgkym (fitsfile* fptr, const(char)* keyname, double* value, char* comm, int* status);
int ffgkyt (
    fitsfile* fptr,
    const(char)* keyname,
    c_long* ivalue,
    double* dvalue,
    char* comm,
    int* status);
int ffgtdm (
    fitsfile* fptr,
    int colnum,
    int maxdim,
    int* naxis,
    c_long* naxes,
    int* status);
int ffgtdmll (
    fitsfile* fptr,
    int colnum,
    int maxdim,
    int* naxis,
    LONGLONG* naxes,
    int* status);
int ffdtdm (
    fitsfile* fptr,
    char* tdimstr,
    int colnum,
    int maxdim,
    int* naxis,
    c_long* naxes,
    int* status);
int ffdtdmll (
    fitsfile* fptr,
    char* tdimstr,
    int colnum,
    int maxdim,
    int* naxis,
    LONGLONG* naxes,
    int* status);
